--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "url": "postgres://eunjzloy:5VJlUE0-Df4uvGwH9IpXkt1n6-IEzf6n@hattie.db.elephantsql.com/eunjzloy"
+    "url": "postgres://hieftvyc:o9d6Pgamia3P6dHiZRQJZFvmoI2v7dTq@tyke.db.elephantsql.com/hieftvyc"
   },
   "test": {
     "username": "root",
